--- a/CLASS/task/index.html
+++ b/CLASS/task/index.html
@@ -41,7 +41,7 @@
 
 
     <form>
-        <table border="5" cellspacing="10px" cellpadding="10px" style="box-shadow: 5px 5px 3px rgb(14, 4, 4); " >
+        <table border="5" cellspacing="10px" cellpadding="10px" style="box-shadow: 5px 5px 3px rgb(14, 4, 4);" class="t" >
             
             <tr >
                 <td><label for="">name</td>
@@ -192,8 +192,14 @@
     <hr><br>
 
 
-    <div class="task1"></div>
-    <div class="task2">hello</div>
+    <div class="p1"></div>
+    <div class="p2">hello</div>
+
+
+    <hr><br>
+
+
+    
 
 
 
