--- a/CLASS/task/1task.html
+++ b/CLASS/task/1task.html
@@ -7,8 +7,8 @@
 
 </head>
 
-<body class="body1">
-    <div>
+<body >
+    <div class="body1">
         <h1 class="h">transparent sing in form</h1>
         <div class="task">
             <h1 class="font">Sign In</h1>
