--- a/CLASS/task/4task.html
+++ b/CLASS/task/4task.html
@@ -14,9 +14,9 @@
             /* background-color: rgb(193, 232, 219); */
         }
 
-        .mani {
+        .mein {
             height: 550px;
-            width: 900px;
+            width: 900px; 
             margin: 100px auto;
             box-shadow: 5px 5px 8px black;
             display: flex;
@@ -258,7 +258,7 @@
 </head>
 
 <body>
-    <div class="mani">
+    <div class="mein">
 
         <div class="left">
 
