--- a/CLASS/task/4task.html
+++ b/CLASS/task/4task.html
@@ -14,7 +14,7 @@
             /* background-color: rgb(193, 232, 219); */
         }
 
-        .mein {
+        .main {
             height: 550px;
             width: 900px; 
             margin: 100px auto;
@@ -258,7 +258,7 @@
 </head>
 
 <body>
-    <div class="mein">
+    <div class="main">
 
         <div class="left">
 
