--- a/CLASS/task/4task.html
+++ b/CLASS/task/4task.html
@@ -18,7 +18,7 @@
             height: 550px;
             width: 900px; 
             margin: 100px auto;
-            box-shadow: 5px 5px 8px black;
+            box-shadow: 0 0 10px black;
             display: flex;
             justify-content: center;
             /* background-color: aqua; */
