--- a/CLASS/daily/index.html
+++ b/CLASS/daily/index.html
@@ -74,7 +74,7 @@
 
     => src = "path/filename.type" url -->
 
-    <a href="test123/text_ing.jpg"> link</a><br>
+    <a href="test123/text_ing.jpg" blank> link</a> <br>
     <a href="x.html" target="_blank"> get page</a><br>
     <a href="//www.amazon.com/">amazon</a>
     <hr>
