--- a/CLASS/daily/javascript/12Control Statements.html
+++ b/CLASS/daily/javascript/12Control Statements.html
@@ -10,9 +10,9 @@
 
 	<script type="text/javascript">
 		
-		==> Control Statements:
+		//==> Control Statements:
 
-		==> Condidtional Statements
+		//==> Condidtional Statements
 
 		1. If ======> for 1 Condidtional
 
