--- a/CLASS/daily/javascript/09ternary_op1_with_conditional_op.html
+++ b/CLASS/daily/javascript/09ternary_op1_with_conditional_op.html
@@ -8,13 +8,15 @@
 <body>
 <script>
 	
-	x=345,y=23,z=987;
+	x=1000,y=23,z=987;
 
-	//max = (x>y) ? x : y;//35
+	//max = (x>y) ? x : y;//345
 
 	//document.write(max);
 
-	max = (x>y) ?   (x>z)? x: z     :      (y>z)? y:z;
+	document.write("<br>")
+
+	max = (x>y) ?   (x>z)? x: z   :    (y>z)? y:z;
 
 	document.write(max);
 
