--- a/psd to html/index.html
+++ b/psd to html/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>psd to html</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section>
-        <div class="container">
-            <nav>
-                
-            </nav>
-        </div>
+    
+            <div class="header">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Menu</a></li>
+                        <li><a href="">Offers</a></li>
+                        <li><a href="">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
     </section>
 </body>
 </html>
